Tweaked tutorial assumptions.

--- a/tutorials/tutorial_notebook.ipynb
+++ b/tutorials/tutorial_notebook.ipynb
@@ -7,7 +7,7 @@
     "# FERS Tutorial Notebook\n",
     "This notebook presents a tutorial to get FERS noobs up and running quickly.\n",
     "\n",
-    "It is assumed that you are running FERS in a virtualbox. The server.sh file will have to be adjusted for your hostname and directories."
+    "It is assumed that you are running FERS locally. Feel free to use the server.sh file if you have a remote setup."
    ]
   },
   {
